固定長プロパティのブロックを追加

--- a/index.html
+++ b/index.html
@@ -1072,10 +1072,10 @@
 				<block type="svctask_is_match"></block>
 			</category>
 			<category name="Property" id="echonet_category">
-				<block type="eproperty_new">
+				<block type="eproperty_varlen">
 					<field name="PROPERTY_CODE">80</field>
 				</block>
-				<block type="eproperty_new">
+				<block type="eproperty_varlen">
 					<field name="PROPERTY_CODE">82</field>
 				</block>
 			</category>
