Rubyコードにならないブロックがあるのを修正。他。

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 								<div class="control-group" for="celltype[identifier]">
 									<label class="control-label" for="eobject_identifier">名前</label>
 									<div class="controls">
-										<input class="form-control" id="eobject_identifier" name="celltype[identifier]" placeholder="car1やball1など" type="text">
+										<input class="form-control" id="eobject_identifier" name="eobject[identifier]" placeholder="Identifier" type="text" onchange="external.onChangeIdentifier(this)">
 									</div>
 								</div>
 								<div class="control-group" for="celltype[attribute]">
